--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "react-type-animation": "^3.2.0",
     "sass": "^1.83.4",
     "swiper": "^11.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
+    "typescript": "5.9.3"
   }
 }
