--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lexend-next",
+  "name": "fyliz-website",
   "version": "2.2.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.859.0",
+    "@aws-sdk/s3-request-presigner": "^3.859.0",
+    "@mdxeditor/editor": "^3.42.0",
+    "@supabase/supabase-js": "^2.56.0",
     "animejs": "^3.2.2",
+    "clsx": "^2.1.1",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "next": "15.1.7",
@@ -21,12 +26,22 @@
     "react-photoswipe-gallery": "^3.0.2",
     "react-scroll-parallax": "^3.4.5",
     "react-type-animation": "^3.2.0",
+    "rehype-pretty-code": "^0.13.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "sass": "^1.83.4",
-    "swiper": "^11.2.2"
+    "swiper": "^11.2.2",
+    "tailwind-merge": "^3.4.0",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "tailwindcss": "^3.4.1"
   }
 }
