--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "next": "15.1.7",
+    "next-mdx-remote": "^5.0.0",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.5",
     "react": "19.0.0",
@@ -36,12 +37,14 @@
     "sass": "^1.83.4",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "25.0.3",
     "@types/react": "19.2.7",
-    "typescript": "5.9.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.9.3"
   }
 }
