--- a/package.json
+++ b/package.json
@@ -14,15 +14,24 @@
     "@mdxeditor/editor": "^3.42.0",
     "@supabase/supabase-js": "^2.56.0",
     "animejs": "^3.2.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
+    "lucide-react": "^0.562.0",
     "next": "15.1.7",
     "next-mdx-remote": "^5.0.0",
     "photoswipe": "^5.4.4",
     "rc-slider": "^11.1.5",
     "react": "19.0.0",
     "react-countdown": "^2.3.6",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "react-dom": "19.0.0",
     "react-photoswipe-gallery": "^3.0.2",
     "react-scroll-parallax": "^3.4.5",
@@ -35,6 +44,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.0",
     "sass": "^1.83.4",
+    "sonner": "^2.0.7",
     "swiper": "^11.2.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
