--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev -p 3071 --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,14 @@
     "@aws-sdk/client-s3": "^3.859.0",
     "@aws-sdk/s3-request-presigner": "^3.859.0",
     "@mdxeditor/editor": "^3.42.0",
+    "@next/third-parties": "^16.1.1",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@supabase/supabase-js": "^2.56.0",
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.1",
@@ -21,21 +29,10 @@
     "lucide-react": "^0.562.0",
     "next": "15.1.7",
     "next-mdx-remote": "^5.0.0",
-    "photoswipe": "^5.4.4",
-    "rc-slider": "^11.1.5",
+    "posthog-js": "^1.311.0",
+    "posthog-node": "^5.18.1",
     "react": "19.0.0",
-    "react-countdown": "^2.3.6",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
     "react-dom": "19.0.0",
-    "react-photoswipe-gallery": "^3.0.2",
-    "react-scroll-parallax": "^3.4.5",
-    "react-type-animation": "^3.2.0",
     "rehype-pretty-code": "^0.13.2",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
@@ -45,10 +42,10 @@
     "remark-rehype": "^11.1.0",
     "sass": "^1.83.4",
     "sonner": "^2.0.7",
-    "swiper": "^11.2.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "unified": "^11.0.5"
+    "unified": "^11.0.5",
+    "uuidv7": "^1.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
