--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "nanoid": "^5.1.5",
     "imagesloaded": "^5.0.0",
     "isotope-layout": "^3.0.6",
     "lucide-react": "^0.562.0",
